--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-haifengfe",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Eslint for HaiFengFE",
   "main": "index.js",
   "scripts": {
@@ -37,5 +37,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "eslint-plugin-vue": "^5.0.0"
   }
 }
